<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:paddingHorizontal="@dimen/size_16dp"
    android:paddingTop="@dimen/size_10dp"
    android:paddingBottom="@dimen/size_20dp">

    <TextView
        android:id="@+id/tvTitleOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/str_password"
        android:textColor="@color/color252525"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:background="@drawable/bg_border_radius"
        android:hint="@string/title_input_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/size_8dp"
        android:paddingVertical="@dimen/size_12dp"
        android:textColorHint="@color/color898989"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOldPassword"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/ivHideShowOldPassword"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginEnd="@dimen/size_10dp"
        android:padding="@dimen/size_5dp"
        android:src="@drawable/ic_show"
        android:tint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/edtOldPassword"
        app:layout_constraintEnd_toEndOf="@id/edtOldPassword"
        app:layout_constraintTop_toTopOf="@id/edtOldPassword"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tvTitleNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_15dp"
        android:text="@string/str_new_password"
        android:textColor="@color/color252525"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtOldPassword" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:background="@drawable/bg_border_radius"
        android:hint="@string/title_input_new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/size_8dp"
        android:paddingVertical="@dimen/size_12dp"
        android:textColorHint="@color/color898989"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleNewPassword"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/ivHideShowNewPassword"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginEnd="@dimen/size_10dp"
        android:padding="@dimen/size_5dp"
        android:src="@drawable/ic_show"
        android:tint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/edtNewPassword"
        app:layout_constraintEnd_toEndOf="@id/edtNewPassword"
        app:layout_constraintTop_toTopOf="@id/edtNewPassword"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tvTitleConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_15dp"
        android:text="@string/str_confirm_new_password"
        android:textColor="@color/color252525"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNewPassword" />

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5dp"
        android:background="@drawable/bg_border_radius"
        android:hint="@string/str_retype_new_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/size_8dp"
        android:paddingVertical="@dimen/size_12dp"
        android:textColorHint="@color/color898989"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConfirmNewPassword"
        tools:ignore="TextFields" />

    <ImageView
        android:id="@+id/ivHideShowConfirmNewPassword"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginEnd="@dimen/size_10dp"
        android:padding="@dimen/size_5dp"
        android:src="@drawable/ic_show"
        android:tint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/edtConfirmNewPassword"
        app:layout_constraintEnd_toEndOf="@id/edtConfirmNewPassword"
        app:layout_constraintTop_toTopOf="@id/edtConfirmNewPassword"
        tools:ignore="UseAppTint" />

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/size_20dp"
        android:background="@drawable/bg_button_highlight"
        android:gravity="center"
        android:text="@string/str_save_password"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>